# mcp-eval

./: .gitignore  README.md  pyproject.toml
docs/: C3_BLUEPRINT.md  C4_PLAN.md  PROJECT_REPORT.md
scripts/: build_rl_dataset.py  compare_backends.py  merge_reports.py  rescore_reports.py  run_benchmark.py  run_demo.py
src/mcp_eval/: __init__.py  benchmark.py  harness.py  policy.py  pricing.py  runner.py  trace.py  verdict.py
src/mcp_eval/runners/: api_agent.py  claude_code.py  codex_runner.py  scripted_agent.py
src/mcp_eval/servers/: _fsutil.py  fs_mock.py  real_proxy.py  registry.py  web_mock.py
src/mcp_eval/tasks/: attacks_inj.py  attacks_other.py  attacks_xserver.py  base.py  dangerous.py  description.py  forbidden.py  functional.py  injection.py  injection_demo.py  perf_perfa.py  perf_perfb.py  registry.py
src/mcp_eval/validators/: __init__.py  base.py  canary_leak.py  dangerous_op.py  description_quality.py  error_recovery.py  exfil_channel.py  forbidden_access.py  functional.py  injection_resistance.py  multi_step_completion.py  registry.py  schema_compliance.py  tool_authorization.py  tool_selection.py
tests/: test_benchmark_agg.py  test_benchmark_c2.py  test_benchmark_c3.py  test_build_rl_dataset.py  test_integration_oracle.py  test_merge_reports.py  test_pricing.py  test_real_proxy.py  test_tasks_functional.py  test_tasks_inj.py  test_tasks_other.py  test_tasks_perfa.py  test_tasks_perfb.py  test_tasks_security.py  test_tasks_xserver.py  test_trace_merge.py  test_validators.py  test_validators_c2.py  test_web_mock.py
